# painted-fit

./: Cargo.toml  Makefile  README.md
examples/decode/: Cargo.toml
examples/decode/src/: main.rs
src/: accumulator.rs  bit_reader.rs  byte_reader.rs  crc.rs  decoder.rs  error.rs  fit.rs  lib.rs
src/profile/: messages.rs  mod.rs  types.rs  version.rs
tests/: apply_scale_and_offset.rs  chained_fit_file.rs  component_expansion.rs  compressed_timestamp.rs  convert_date.rs  convert_type.rs  corrupt_file.rs  decoder_check_integrity.rs  decoder_fit_file.rs  decoder_is_fit.rs  developer_data.rs  sub_field_and_component_expansion.rs  sub_field_expansion.rs
tests/data/: expand_hr_mesgs.rs  gear_change_data.json  mod.rs
tools/profile-gen/: Cargo.toml
tools/profile-gen/src/: main.rs  parser.rs  process.rs  writer.rs
wasm-binding/: Cargo.toml
wasm-binding/src/: lib.rs
