[package]
name = "fit"
description = "Parse Garmin Fit files"
version = "0.1.0"
edition = "2021"
authors = ["Tonitrnel"]
keywords = ["fit", "parser", "ant", "garmin", "serde"]
repository = "https://github.com/tonitrnel/painted-fit"
license = "MIT"
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "LICENSE"
]

[lib]
name = "fit"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
thiserror = "1.0.50"

[workspace]
members = [
    "tools/profile-gen",
    "examples/*"
]