[package]
name = "fit"
description = "Parse Fit protocol files"
version = "0.1.0"
edition = "2021"
authors = ["Tonitrnel <tonitrnel@ptdg.dev>"]
keywords = ["fit", "parser", "ant", "garmin", "serde"]
repository = "https://github.com/tonitrnel/painted-fit"
license = "MIT"
readme = "README.md"

[lib]
name = "fit"
path = "src/lib.rs"

[dependencies]
chrono = "0.4.31"
thiserror = "1.0.50"
serde = {version = "1.0.192", features = ["serde_derive"]}
serde_json = "1.0.108"

[workspace]
members = [
    "tools/profile-gen",
    "examples/*"
]