[package]
name = "fit"
description = "Fit protocol file decoder"
version = "0.1.0"
edition = "2021"
authors = ["Tonitrnel <tonitrnel@ptdg.dev>"]
keywords = ["fit", "decoder", "ant", "garmin", "serde"]
repository = "https://github.com/tonitrnel/painted-fit"
license = "MIT"
readme = "README.md"

[lib]
name = "fit"
path = "src/lib.rs"

[dependencies]
chrono = "0.4.31"
thiserror = "1.0.50"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"

[workspace]
members = [
    "tools/profile-gen",
    "examples/*",
    "wasm-binding"
]