[package]
name = "fit-wasm-binding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.88"
fit = {path = "../", version = "0.1.0"}
serde = { version = "1.0.192", features = ["derive"] }
serde-wasm-bindgen = "0.6.1"

[lib]
crate-type = ["cdylib"]