[package]
name = "profile-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.22.1"
lazy_static = "1.4.0"
clap = { version = "4.4.8", features = ["derive"] }
zip = "0.6.6"
chrono = "0.4.31"